# terraForge

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT  CONTRIBUTING.md  LICENSE  README.md  SECURITY  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  prompt-eval.yml  publish.yml
ai-dev/: architecture.md  patterns.md  prompt-templates.md  spec.md  test-data-plan.md
ai-dev/agents/: README.md  architect.md  gis_domain_expert.md  python_expert.md
ai-dev/decisions/: DL-001-monorepo.md  DL-002-async-first-io.md  DL-003-storage-abstraction.md  DL-004-output-contract.md  DL-005-rust-boundary.md  DL-006-engineering-credibility.md  DL-007-promptfoo-eval.md
ai-dev/guardrails/: README.md  cloud-native-compliance.md  coding-standards.md  data-handling.md
ai-dev/skills/: README.md  cloud-native-formats.md
ai-dev/validation-reports/: README.md  VR-M0-format-detection.md  VR-M0-raster-info.md  VR-M0-vector-info.md  VR-M1-kygeonet-integration.md  VR-M1-raster-preview.md  VR-M1-raster-validate.md  VR-M2-raster-convert.md  VR-M2-vector-convert.md  VR-M2-vector-query.md  VR-M3-cube-info.md  VR-M3-pipeline-run.md  VR-M3-stac-fetch.md  VR-M4-real-world-validation.md
api/reference/: index.html
architecture/: index.html
cli/: index.html
data/: .gitignore
data/samples/: raster_info.json  stac_fetch.json  stac_search.json  vector_info.json
docs/: architecture.md  cli.md  getting-started.md  index.md  release-notes.md  stac-collections.md
docs/api/: reference.md
docs/examples/: arcgis-pro.md  dem-terrain.md  index.md  ndvi-analysis.md  stac-discovery.md
docs/tutorials/: arcgis-pro.md  dem-hillshade.md  lidar-access.md  titiler-maps.md
evals/: README.md  promptfooconfig.redteam.yaml  promptfooconfig.templates.yaml  promptfooconfig.yaml
evals/assertions/: check_async_pattern.js  check_error_handling.js  check_no_direct_imports.js  check_structured_return.js
evals/prompts/: python_expert_implement.txt  redteam_system.txt  template_implement_feature.txt
examples/: index.html
examples/arcgis/: EarthForge.FormatDetect.pyt.xml  EarthForge.STACSearch.pyt.xml  EarthForge.pyt  EarthForge.pyt.xml
examples/arcgis-pro/: index.html
examples/dem-terrain/: index.html
examples/ndvi-analysis/: index.html
examples/notebooks/: 01_getting_started.ipynb  02_stac_search.ipynb  03_vector_operations.ipynb  04_spatial_analysis_geojson.ipynb  05_titiler_visualization.ipynb
examples/outputs/: README.md  dem_stats_denali_alaska.txt  format_detection_matrix.txt  ndvi_amazon_manaus.txt  ndvi_colorado_front_range.txt  ndvi_netherlands_rotterdam.txt  opentopo_grand_canyon_dem.txt  opentopo_hawaii_volcano.txt  opentopo_swiss_alps_dem.txt  pipeline_ndvi_output.txt  raster_stats_dem_histogram.txt  stac_landsat_yellowstone.txt  stac_multi_collection_yosemite.txt  stac_search_results_map.txt  vector_clip_lexington_footprints.txt
examples/scripts/: cube_era5_mean_temp_demo.py  cube_info_era5_demo.py  data_quality_audit.py  format_detection_demo.py  ky_wma_demo.py  kygeonet_stac_demo.py  multi_source_site_assessment.py  ndvi_pipeline.yaml  opentopo_andes_demo.py  opentopo_grand_canyon_demo.py  opentopo_hawaii_volcano_demo.py  opentopo_iceland_demo.py  opentopo_japanese_alps_demo.py  opentopo_mt_rainier_demo.py  opentopo_new_zealand_demo.py  opentopo_norway_fjords_demo.py  opentopo_swiss_alps_demo.py  pipeline_ndvi_demo.py  raster_ndvi_demo.py  raster_preview_dem_demo.py  raster_stats_demo.py  stac_search_map_demo.py  (+19 more)
getting-started/: index.html
release-notes/: index.html
search/: search_index.json
stac-collections/: index.html
(+7 files in other folders)
